tests/errors/_questions/preprocessor/undefined/not_realised_3.c
#define KEK 1, 2

int main()
{
#if KEK == 1
	return 0;
#endif

	return 1;
}
